manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
   app: sample
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
