manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
spec:
  rules:
  - http:
     paths:
     - path: /sample
       pathType: Prefix
       backend:
         service:
           name: sample-service
           port:
             number: 80
